# JetEDMD_experiments

./: .gitignore  ADD_NEW_EXPERIMENTS.md  AGENTS.md  INSTRUCTIONS.md  NEW_LIBRARIES.md  README.md  pyproject.toml  requirements.txt
dynid_benchmark/: __init__.py  config.py
dynid_benchmark/evaluation/: __init__.py  events.py  frf.py  lyapunov.py  metrics.py  psd.py
dynid_benchmark/io/: dataset.py  viz.py
dynid_benchmark/models/: __init__.py  base.py  edmd.py  implicit_pi.py  implicit_sindy.py  neural_ode_torch.py  null.py  pysindy_adapter.py  sindy_implicit.py  sindy_pi.py  sindy_stlsq.py
dynid_benchmark/runners/: run_experiment.py
dynid_benchmark/systems/: a1_dry_friction.py  a2_bouncing_ball.py  b1_ou.py  b2_doublewell.py  base.py  c1_duffing.py  c1_lti_mass_spring.py  d1_burgers.py  d2_kuramoto_sivashinsky.py  lorenz63.py
exp/: A1_kappa_sweep.yaml  A2_bouncing_ball.yaml  B1_OU_noise.yaml  B2_doublewell.yaml  C1_duffing_forced.yaml  C1_mass_spring_PRBS.yaml  D1_burgers1d.yaml  D2_kuramoto_sivashinsky.yaml  E1_Lorenz63.yaml  E2_MSD_Input.yaml  E3_Burgers1D.yaml  E4_DryFriction.yaml
tests/: test_configs.py  test_models.py  test_registry.py  test_systems.py
